@@ -11,3 +11,4 @@ Initial version
 5. Correctly handle materialized views
 6. Fix bug in autoload
 7. Add EMA and ATR indicators
+8. Support non-character timeseries ID
